2001-01-01  Yukihiro Nakai <nakai@gnome.gr.jp>

	* ja.po: Update Japanese translation

2000-12-31  Pauli Virtanen  <pauli.virtanen@saunalahti.fi>

	* fi.po: Updated Finnish translation

2000-12-18  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* it.po: Updated italian translation

2000-12-14  Tor Lillqvist  <tml@iki.fi>

	* makefile.mingw: Simplify, now that the .po files are already in
	UTF-8.

2000-12-08  Pablo Saratxaga <pablo@mandrakesoft.com>

	* az.po: Added Azeri language file

2000-12-06  Pablo Saratxaga <pablo@mandrakesoft.com>

	* he.po,nl.po,pl.po: corrected syntax errors and completed the
	headers so msgfmt -c oputput is useful

2000-11-21  Robert Brady  <robert@suse.co.uk>

	* update.pl: Allow a parameter to specify the name of the .pot
	file to generate. (for stats).

2000-11-12  Robert Brady  <robert@suse.co.uk>

	* *.po: Convert them all to UTF-8. Rename Chinese .po's so
	they don't have the codeset.

	README.translators: Information on editing UTF-8 files.

2000-11-10  Robert Brady  <robert@suse.co.uk>

	* update.pl: Module name is "gtk20" now.

2000-11-09  Jarkko Ranta  <jjranta@cc.joensuu.fi>

	* fi.po: Updated Finnish translation

2000-11-08  Szabolcs Ban <shooby@gnome.hu>

        * hu.po: Updated Hungarian translation

2000-10-30  Robert Brady  <robert@suse.co.uk>

	* he.po: s/utf-8/UTF-8/
	
2000-10-30  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-10-30  Zbigniew Chyla  <cyba@gnome.pl>

	* pl.po: Updated Polish translation.

2000-10-28  Tor Lillqvist  <tml@iki.fi>

	* makefile.mingw: Add en@IPA and ia.

2000-10-27  Robert Brady  <robert@suse.co.uk>

	* POTFILES.in: Added gtkstock.c
	
	* en_GB.po: Added British translation.

	* en@IPA.po: Added English (IPA) translation.

	* ia.po: Added Interlingua translation.

2000-10-24  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* it.po: Updated Italian translation

2000-10-22  Robert Brady  <robert@suse.co.uk>

	* fa.po, he.po: Default to right-to-left.