@@ -1,15 +1,29 @@
 # Files from the Gtk ditribution which have already been
-# marked to allow runtime translation of messages
+gdk-pixbuf/gdk-pixbuf-animation.c
+gdk-pixbuf/gdk-pixbuf-data.c
+gdk-pixbuf/gdk-pixbuf-io.c
 gdk-pixbuf/io-gif.c
+gdk-pixbuf/io-jpeg.c
+gdk-pixbuf/io-png.c
+gdk-pixbuf/io-pnm.c
+gdk-pixbuf/gdk-pixbuf-loader.c
+gtk/gtkcellrenderer.c
+gtk/gtkcellrendererpixbuf.c
+gtk/gtkcellrenderertext.c
+gtk/gtkcellrenderertextpixbuf.c
+gtk/gtkcellrenderertoggle.c
 gtk/gtkcolorsel.c
 gtk/gtkcolorseldialog.c
 gtk/gtkfilesel.c
 gtk/gtkfontsel.c
 gtk/gtkgamma.c
+gtk/gtkiconfactory.c
 gtk/gtkinputdialog.c
 gtk/gtkmain.c
 gtk/gtkstock.c
 gtk/gtknotebook.c
 gtk/gtkrc.c
+gtk/gtkstock.c
 gtk/gtkthemes.c
 gtk/gtktipsquery.c
+# marked to allow runtime translation of messages
