@@ -1,3 +1,8 @@
+2001-01-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Updated Norwegian translation.
+	* POTFILES.in: Updated some.
+	
 2001-01-01  Yukihiro Nakai <nakai@gnome.gr.jp>
 
 	* ja.po: Update Japanese translation
